fix: JDK17 compatibility - replace List.getFirst()/getLast() in progress-reporting and checker code
The cherry-picked progress-reporting (#5372, #5376) and orphan-reclaim (#5375)
commits used List.getFirst()/getLast(), which requires JDK 21. Replaced with
get(0) / get(size() - 1) to keep the java17 branch compiling on Java 17.